Fix video covering menu

--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ nav {
   width: 100%;
   position: fixed;
   background-color: #FF8800;
+  z-index: 10;
 }
 
 nav ul {
